# AGENTS.db

./: .clippy.toml  .env.example  .gitignore  AGENTS.db  AGENTS.delta.db  AGENTS.md  AGENTS.user.db  CLAUDE.md  Cargo.toml  LICENSE  README.md  WORKFLOW.md
.github/: FUNDING.yml
.github/workflows/: release.yml
crates/agentsdb-cli/: Cargo.toml
crates/agentsdb-cli/src/: app.rs  cli.rs  embedding_helpers.rs  main.rs  types.rs  util.rs
crates/agentsdb-cli/src/commands/: clean.rs  collect.rs  compact.rs  compile.rs  destroy.rs  diff.rs  export.rs  import.rs  index.rs  init.rs  inspect.rs  list.rs  mod.rs  options.rs  promote.rs  proposals.rs  reembed.rs  search.rs  smash.rs  validate.rs  web.rs  write.rs
crates/agentsdb-cli/tests/: e2e.rs
crates/agentsdb-core/: Cargo.toml
crates/agentsdb-core/src/: embed.rs  error.rs  export.rs  lib.rs  types.rs
crates/agentsdb-embeddings/: Cargo.toml  build.rs
crates/agentsdb-embeddings/src/: backends.rs  build_info.rs  cache.rs  config.rs  embedder.rs  hash.rs  layer_metadata.rs  lib.rs  verification.rs
crates/agentsdb-embeddings/src/backends/: anthropic.rs  bedrock.rs  candle.rs  cohere.rs  common.rs  fastembed.rs  gemini.rs  mod.rs  openai.rs  voyage.rs
crates/agentsdb-format/: Cargo.toml
crates/agentsdb-format/src/: lib.rs  reader.rs  writer.rs
crates/agentsdb-mcp/: Cargo.toml
crates/agentsdb-mcp/src/: lib.rs
crates/agentsdb-ops/: Cargo.toml
crates/agentsdb-ops/src/: decay.rs  export.rs  import.rs  lib.rs  promote.rs  remove.rs  search.rs  util.rs  write.rs
crates/agentsdb-query/: Cargo.toml
crates/agentsdb-query/src/: index.rs  lib.rs
crates/agentsdb-web/: Cargo.toml
crates/agentsdb-web/assets/: app.css  app.js  index.html
crates/agentsdb-web/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
crates/agentsdb-web/frontend/src/: api.ts  app.tsx  index.css  types.ts
crates/agentsdb-web/frontend/src/components/: AddChunkPanel.tsx  ChunkList.tsx  ChunkViewer.tsx  EditChunkModal.tsx  ExportImportPanel.tsx  Header.tsx  LayerMetadataModal.tsx  LayerSelector.tsx  PromoteModal.tsx  ProposalDetailsModal.tsx  ProposalsPanel.tsx  ProposeModal.tsx
crates/agentsdb-web/frontend/src/utils/: helpers.ts  markdown.ts
crates/agentsdb-web/src/: lib.rs
docs/: RFC.md  Reference Implementation v0.1.md  Reference Implementation.md  WORKFLOW.md
scripts/: bump-version.sh  install-local.sh  install.sh
