[workspace]
members = [
  "crates/agentsdb-core",
  "crates/agentsdb-embeddings",
  "crates/agentsdb-format",
  "crates/agentsdb-query",
  "crates/agentsdb-mcp",
  "crates/agentsdb-ops",
  "crates/agentsdb-web",
  "crates/agentsdb-cli",
]
resolver = "2"

[workspace.lints.rust]
# Allow missing documentation for public items
missing_docs = "allow"
# Deny use of deprecated items
deprecated = "deny"

[workspace.lints.clippy]
# === Correctness (Deny - These are likely bugs) ===
# Deny patterns that are almost certainly bugs
correctness = { level = "deny", priority = -1 }

# === Suspicious (Deny - These look wrong) ===
# Code that looks suspicious and is likely incorrect
suspicious = { level = "deny", priority = -1 }

# === Complexity (Warn - Suggest simplifications) ===
# Code that can be simplified
complexity = { level = "warn", priority = -1 }

# === Performance (Warn - Suggest optimizations) ===
# Code that could be more efficient
perf = { level = "warn", priority = -1 }

# === Style (Warn - Consistency) ===
# Stylistic issues that don't affect correctness
style = { level = "warn", priority = -1 }

# === Pedantic (Allow by default, can enable selectively) ===
pedantic = { level = "allow", priority = -1 }

# === Specific lint overrides ===

# Error handling - Warn on unwrap/expect (but don't deny since there are many uses)
# These should ideally be replaced with proper error handling
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Allow missing error/panic documentation
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Performance
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
needless_pass_by_value = "warn"
unnecessary_wraps = "warn"

# Code quality
cognitive_complexity = "warn"
too_many_lines = "warn"
type_complexity = "warn"
single_match_else = "warn"
missing_const_for_fn = "warn"

# Documentation
doc_markdown = "allow"
missing_docs_in_private_items = "allow"  # Don't require docs on private items

# Safety
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"

# String operations
string_add = "warn"
string_add_assign = "warn"
string_slice = "warn"

# Collections
inefficient_to_string = "warn"
redundant_clone = "warn"

# Error types
enum_glob_use = "warn"
wildcard_enum_match_arm = "warn"

# Imports
wildcard_imports = "warn"

# Naming
module_name_repetitions = "allow"  # Sometimes intentional for clarity

# Allow some pedantic lints that are too strict
must_use_candidate = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
too_many_arguments = "allow"  # Will use threshold from .clippy.toml instead
