[package]
name = "agentsdb-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "agentsdb"
path = "src/main.rs"

[dependencies]
agentsdb-format = { path = "../agentsdb-format" }
agentsdb-query = { path = "../agentsdb-query" }
agentsdb-core = { path = "../agentsdb-core", features = ["serde"] }
agentsdb-mcp = { path = "../agentsdb-mcp" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
