[package]
name = "agentsdb-cli"
version = "0.1.5"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[features]
default = []
candle = ["agentsdb-embeddings/candle"]
ort = ["agentsdb-embeddings/ort"]
openai = ["agentsdb-embeddings/openai"]
voyage = ["agentsdb-embeddings/voyage"]
cohere = ["agentsdb-embeddings/cohere"]
all-embedders = ["candle", "ort", "openai", "voyage", "cohere"]

[[bin]]
name = "agentsdb"
path = "src/main.rs"

[dependencies]
agentsdb-format = { path = "../agentsdb-format" }
agentsdb-query = { path = "../agentsdb-query" }
agentsdb-core = { path = "../agentsdb-core", features = ["serde"] }
agentsdb-embeddings = { path = "../agentsdb-embeddings" }
agentsdb-mcp = { path = "../agentsdb-mcp" }
agentsdb-ops = { path = "../agentsdb-ops" }
agentsdb-web = { path = "../agentsdb-web" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
