[package]
name = "agentsdb-embeddings"
version = "0.1.5"
edition = "2021"

[features]
default = []
# Local embedders (heavy dependencies; opt-in).
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
ort = ["dep:fastembed", "dep:hf-hub"]
# Remote providers (opt-in; require network at runtime).
openai = ["dep:ureq"]
voyage = ["dep:ureq"]
cohere = ["dep:ureq"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

agentsdb-core = { path = "../agentsdb-core" }
agentsdb-format = { path = "../agentsdb-format" }

fastembed = { version = "4.9.1", optional = true, default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries"] }
hf-hub = { version = "0.4.3", optional = true, default-features = false, features = ["native-tls", "ureq"] }
ureq = { version = "2", optional = true, features = ["json"] }

candle-core = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
candle-transformers = { version = "0.9.1", optional = true }
tokenizers = { version = "0.21.0", optional = true }

[dev-dependencies]
tempfile = "3.10"
