[package]
name = "agentsdb-mcp"
version = "0.1.3"
edition = "2021"
license = "MIT"

[dependencies]
agentsdb-core = { path = "../agentsdb-core", features = ["serde"] }
agentsdb-format = { path = "../agentsdb-format" }
agentsdb-query = { path = "../agentsdb-query" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
