[package]
name = "agentsdb-ops"
version = "0.1.6"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

agentsdb-core = { path = "../agentsdb-core", features = ["serde"] }
agentsdb-format = { path = "../agentsdb-format" }
agentsdb-embeddings = { path = "../agentsdb-embeddings" }
agentsdb-query = { path = "../agentsdb-query" }
