[package]
name = "agentsdb-query"
version = "0.1.4"
edition = "2021"
license = "MIT"

[dependencies]
agentsdb-core = { path = "../agentsdb-core", features = ["serde"] }
agentsdb-format = { path = "../agentsdb-format" }
agentsdb-embeddings = { path = "../agentsdb-embeddings" }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
