[package]
name = "agentsdb-web"
version = "0.1.2"
edition = "2021"
license = "MIT"

[dependencies]
agentsdb-format = { path = "../agentsdb-format" }
agentsdb-core = { path = "../agentsdb-core", features = ["serde"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

